kubernetes/base/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: tg-client-manager-network-policy
spec:
  podSelector:
    matchExpressions:
    - {key: app, operator: In, values: [tg-client-manager, tg-client-user, wa-baileys-client, whatsapp-baileys-manager, facebook-fca-manager, facebook-fca-client, instagram-fca-client, instagram-fca-manager]}
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - {}
  egress:
  - {}
